--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-02  Christian Stimming  <stimming@tuhh.de>
+
+	* src/engine/gnc-book.c: File permission fix by Matt Brubeck
+	<mbrubeck@cs.hmc.edu>
+
 2002-07-21  Christian Stimming  <stimming@tuhh.de>
 
 	* po/fr.po: Fixed for French translation by James A. Treacy
