2002-08-03  Christian Stimming  <stimming@tuhh.de>
	* po/sv.po, po/glossary/sv.po: Updated Swedish translation by
	Christian Rose <menthos@menthos.com>.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.6@7135 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-08-03  Christian Stimming  <stimming@tuhh.de>
 
+	* po/sv.po, po/glossary/sv.po: Updated Swedish translation by
+	Christian Rose <menthos@menthos.com>.
+
 	* po/de.po: Updated German translation.
 
 	* po/glossary/gnc-glossary.txt, po/glossary/de.po: Discovered new
