--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-05  Christian Stimming  <stimming@tuhh.de>
+
+	* po/pt.po: Updated Portuguese translation by Duarte Loreto
+	<happyguy_pt@hotmail.com>.
+
 2002-08-03  Christian Stimming  <stimming@tuhh.de>
 
 	* po/sv.po, po/glossary/sv.po: Updated Swedish translation by
