--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-06  David Hampton  <hampton@employees.org>
+
+	* doc/sgml/*/Makefile.am: Tweak for newer versions of db2html.
+
 2002-08-05  Christian Stimming  <stimming@tuhh.de>
 
 	* po/pt.po: Updated Portuguese translation by Duarte Loreto
