--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-09  Christian Stimming  <stimming@tuhh.de>
+
+	* po/pt_BR.po: updated Brasilian Portugese translation by Jose
+	Carlos <joseca@psabs.com>.
+
 2002-08-06  David Hampton  <hampton@employees.org>
 
 	* doc/sgml/*/Makefile.am: Tweak for newer versions of db2html.
