--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-2002-08-09  Christian Stimming  <stimming@tuhh.de>
+2002-08-10  Christian Stimming  <stimming@tuhh.de>
+
+	* po/de.po: String fixes by Herbert Thoma <tma@iis.fhg.de>
 
 	* po/pt_BR.po: updated Brasilian Portugese translation by Jose
 	Carlos <joseca@psabs.com>.
