Fix a dangling pointer reference.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.6@7153 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-10  David Hampton  <hampton@employees.org>
+
+	* src/FileDialog.c (gncFileQuerySave): Fix a common crash (78132
+	et. al.) caused by a dangling pointer reference.
+
 2002-08-10  Christian Stimming  <stimming@tuhh.de>
 
 	* po/de.po: String fixes by Herbert Thoma <tma@iis.fhg.de>
