--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-11  Chris Lyttle  <chris@wilddev.net>
+
+	* src/engine/sql/Makefile.am: Added RH libs fix from their patch file
+	* rpm/gnucash.spec.in: Added some RH enhancements
+
 2002-08-10  David Hampton  <hampton@employees.org>
 
 	* src/FileDialog.c (gncFileQuerySave): Fix a common crash (78132
