--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-11  David Hampton  <hampton@employees.org>
+
+	* acinclude.m4: 
+	* configure.in: Add upper bounds checking on the versions of
+	guile and g-wrap.
+
 2002-08-11  Chris Lyttle  <chris@wilddev.net>
 
 	* src/engine/sql/Makefile.am: Added RH libs fix from their patch file
