*** empty log message ***
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.6@7164 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/po/az.po
+++ b/po/az.po
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: gnucash 1.6\n"
 "POT-Creation-Date: 2002-03-10 15:53-0800\n"
 "PO-Revision-Date: 2001-11-27 17:55GMT+0200\n"
 "Last-Translator: Vasif İsmayıloğlu MD <azerb_linux@hotmail.com>\n"
