--- a/po/hu.po
+++ b/po/hu.po
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: gnucash 1.6\n"
 "POT-Creation-Date: 2002-03-10 15:53-0800\n"
 "PO-Revision-Date: 2001-12-07 20:51GMT\n"
 "Last-Translator: Péter Hosszú <hosszu@web.de>\n"
