--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,20 @@
 Version history:
 ------- -------
+ 1.6.7  - 11 August 2002
+ 	 o Updated or new translations for Japanese, Italian, Traditional
+	   Chinese, Simplified Chinese, Russian, French, German, Swedish,
+	   Portuguese, Brasilian Portugese
+	 o Add French account hierarchy template
+	 o Back-ported fix for locale of new accounts.
+	 o File permission fix
+	 o Changed "Opening Balances" to "Opening Balance" to unify the
+	   account name
+	 o Tweak for newer versions of db2html
+	 o Fix a common crash (Gnome Bug #78132 et. al.) caused by a 
+	   dangling pointer reference.
+	 o Add upper bounds checking on the versions of guile and g-wrap.
+	 o Fix for guile-1.4.1 srfi problem.
+
  1.6.6  - 10 March 2002
  	 o Updated or new translations for Dutch, Norwegian, Russian,
 	   Greek, French, German, Portuguese, Azerbaijani Turkic,
