--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-15  Derek Atkins  <derek@ihtfp.com>
+
+	* acinclude.m4: re-add dependency on guile-config, but make it
+	  work without an error.
+	* configure.in: change the URL to g-wrap to something that exists
+
 2002-08-14  Chris Lyttle  <chris@wilddev.net>
 
 	* acinclude.m4: remove dependency on guile-config (David Hampton)
