--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-25  Christian Stimming  <stimming@tuhh.de>
+
+	* po/glossary/pt.po: Updated Portuguese translation by Duarte
+	Loreto <happyguy_pt@hotmail.com>.
+	
 2002-08-23  Derek Atkins  <derek@ihtfp.com>
 
 	* rpm/*: revert Chris Lyttle's patches.  Make gnucash.spec depend
