remove libgncengine.la line to fix sql build problem
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.6@7194 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-25  Chris Lyttle  <chris@wilddev.net>
+
+	* src/engine/sql/Makefile.am: remove RH libs fix
+	* src/engine/Makefile.am: add '.' to SUBDIRS (Derek Atkins)
+
 2002-08-25  Christian Stimming  <stimming@tuhh.de>
 
 	* po/glossary/pt.po: Updated Portuguese translation by Duarte
