--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-27  Christian Stimming  <stimming@tuhh.de>
+
+	* po/no.po, po/glossary/no.po: Updated Norwegian (bokmål)
+	translation by Kjartan Maraas <kmaraas@gnome.org>
+
 2002-08-25  Chris Lyttle  <chris@wilddev.net>
 
 	* src/engine/sql/Makefile.am: remove RH libs fix
