2002-09-01  Christian Stimming  <stimming@tuhh.de>
	* src/scm/html-style-info.scm
	(gnc:default-html-gnc-monetary-renderer): Add new workaround to
	display the Euro symbol correctly in gtkhtml.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.6@7199 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-01  Christian Stimming  <stimming@tuhh.de>
+
+	* src/scm/html-style-info.scm
+	(gnc:default-html-gnc-monetary-renderer): Add new workaround to
+	display the Euro symbol correctly in gtkhtml.
+
 2002-08-27  Christian Stimming  <stimming@tuhh.de>
 
 	* po/no.po, po/glossary/no.po: Updated Norwegian (bokmål)
