2002-10-18  Christian Stimming  <stimming@tuhh.de>
	* accounts/fr_FR/*: Some bug fixes by frederic.lespez@wanadoo.fr.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.6@7347 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-18  Christian Stimming  <stimming@tuhh.de>
+
+	* accounts/fr_FR/*: Some bug fixes by frederic.lespez@wanadoo.fr.
+
 2002-09-01  Christian Stimming  <stimming@tuhh.de>
 
 	* src/scm/html-style-info.scm
