Large accounts are overflowing the data types used in the register code and are causing crashes. #92072, #98802
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.6@7696 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2002-12-19  David Hampton  <hampton@employees.org>
+
+	* src/register/register-common.h:
+	* src/register/table-allgui.h: Large accounts are overflowing the
+	data types used in the register code and are causing
+	crashes. #92072, #98802
+
 2002-10-18  Christian Stimming  <stimming@tuhh.de>
 
 	* accounts/fr_FR/*: Some bug fixes by frederic.lespez@wanadoo.fr.
