--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2003-02-02  Chris Lyttle  <chris@wilddev.net>
 
+	* README: Changed to suit new stable release
+	* configure.in: release 1.8.0
+	* src/scm/main.scm: turn off devel version message
+	* NEWS: add whats news
+
+2003-02-02  Chris Lyttle  <chris@wilddev.net>
+
 	* rpm/gnucash.spec.in: add options to build ofx,hbci and postgresql
 
 2003-02-02  Benoit Grégoire  <bock@step.polymtl.ca>
