--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,12 @@
 
 	* rpm/gnucash.in: don't call autoconf
 
+	Pull up from HEAD:
+
+	* src/import-export/qif-import/qif-file.scm: fix a
+	  wrong-number-of-arguments fatal crash when trying to reparse
+	  dates.
+
 2003-02-02  Chris Lyttle  <chris@wilddev.net>
 
 	* README: Changed to suit new stable release
