--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-04  Christian Stimming  <stimming@tuhh.de>
+
+	* po/it.po: Updated Italian translation by Lorenzo Cappelletti
+	<L.Cappelletti@mail.com>.
+
 2003-02-04  Derek Atkins  <derek@ihtfp.com>
 
 	Pull up from HEAD:
