* src/bin/overrides/gnucash-build-env.in: add business-utils
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@7950 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
 	* src/app-utils/gnc-ui-utils.c: Don't round unless force_fit is true.
 	  Fixes Debian Bug #179802.
 
+	* src/bin/overrides/gnucash-build-env.in: add business-utils
+
 2003-02-04  Christian Stimming  <stimming@tuhh.de>
 
 	* po/it.po: Updated Italian translation by Lorenzo Cappelletti
