* src/business/business-utils/Makefile.am: make scm-links so you 	  can run gnucash from within the build tree
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@7951 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,9 @@
 
 	* src/bin/overrides/gnucash-build-env.in: add business-utils
 
+	* src/business/business-utils/Makefile.am: make scm-links so you
+	  can run gnucash from within the build tree
+	
 2003-02-04  Christian Stimming  <stimming@tuhh.de>
 
 	* po/it.po: Updated Italian translation by Lorenzo Cappelletti
