* src/scm/tip-list.scm: remove the tip that says that this is a development 	  version.  (Thanks, pogma)
	* src/scm/command-line.scm: remove the "development version" string
	  when running "gnucash --version"


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@7953 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-02-07  Derek Atkins  <derek@ihtfp.com>
+
+	* src/scm/tip-list.scm: remove the tip that says that this is a development
+	  version.  (Thanks, pogma)
+
+	* src/scm/command-line.scm: remove the "development version" string
+	  when running "gnucash --version"
+
 2003-02-05  Derek Atkins  <derek@ihtfp.com>
 
 	Pull up from HEAD:
