Pull up from HEAD: 	* src/import-export/import-backend.c: Add heuristic for duplicate 	  matching by check number. 	* doc/README.OFX: Update
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@7955 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,11 @@
 	* src/scm/command-line.scm: remove the "development version" string
 	  when running "gnucash --version"
 
+	Pull up from HEAD:
+	* src/import-export/import-backend.c: Add heuristic for duplicate
+	  matching by check number.  
+	* doc/README.OFX: Update
+
 2003-02-05  Derek Atkins  <derek@ihtfp.com>
 
 	Pull up from HEAD:
