--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-02-10  Christian Stimming  <stimming@tuhh.de>
+
+	* src/import-export/hbci/glade/hbci.glade, po/de.po: Clarify some
+	HBCI strings.
+
+	* configure.in: require newer openhbci: 0.9.6, from Jan 31.
+
 2003-02-09  Chris Lyttle  <chris@wilddev.net>
 
 	* configure.in: release 1.8.1
