2003-02-10  Christian Stimming  <stimming@tuhh.de>
	* po/es.po: Updated Spanish translation by Eneko Lacunza
	<enlar@enlar.net>.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@7971 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/AUTHORS
+++ b/AUTHORS
@@ -140,6 +140,7 @@ Ben Kelly <ben.kelly@ieee.org> for Motif menu bug fix, core dump fixes
 Tom Kludy <tkludy@csd.sgi.com> for SGI Irix port
 Matt Kraai <kraai@alumni.carnegiemellon.edu> date accelerator bug fix
 Sven Kuenzler <sk@xgm.de> for SuSE README file
+Eneko Lacunza <enlar@enlar.net> Spanish Translation
 Bryan Larsen <blarsen@ada-works.com> guile budget report
 Chris J (Oakton) Leach <LeachCJ@az1.bp.com> autoconf patch
 Nicholas Lee <nj.lee@plumtree.co.nz> scheme bug fix
