Updated German translation.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@7988 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnucash 1.7\n"
 "POT-Creation-Date: 2003-02-14 21:35+0100\n"
-"PO-Revision-Date: 2003-02-14 21:38+0100\n"
+"PO-Revision-Date: 2003-02-14 21:53+0100\n"
 "Last-Translator: Christian Stimming <stimming@tuhh.de>\n"
 "Language-Team: DE\n"
 "MIME-Version: 1.0\n"
@@ -7367,8 +7367,8 @@ msgstr ""
 "\n"
 "Wenn Sie noch keine OpenHBCI Konfigurations-Datei haben, geben Sie\n"
 "hier bitte einen Dateinamen an. Eine neue OpenHBCI\n"
-"Konfigurations-Datei mit diesem Namen wird dann nach Ende dieser HBCI\n"
-"Einrichtung erstellt werden."
+"Konfigurations-Datei mit diesem Namen wird dann nach Abschluﬂ dieses\n"
+"HBCI Einrichtungs-Druiden/Assistenten erstellt werden."
 
 #: src/import-export/hbci/glade/hbci.glade.h:57
 msgid ""
