--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-15  Derek Atkins  <derek@ihtfp.com>
+
+	* Start changes for Gnome-2.
+	* remove macros/gnome*.m4, so we can use gnome's installed versions.
+
 2003-02-14  Benoit Grégoire  <bock@step.polymtl.ca>
 
 	* src/import-export/import-backend.c: 
