--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+2003-02-16  Derek Atkins  <derek@ihtfp.com>
+
+	Pull up from HEAD:
+	* src/import-export/qif-import/qif-file.scm:
+	  - No need to use the 'negative' field anymore
+	  - Save the default split, even if we've got a split transaction.
+	    It will be useful later to make sure we have a properly balanced
+	    transaction and everything has the "right sign"
+	* src/import-export/qif-import/qif-objects.scm:
+	  - remove the 'negative' field of a split
+	  - add a 'default-split' field of a transaction
+	  - change the split-amounts and set-split-amounts! functions
+	    the split-amounts will also return the default-split, if it
+	    exists.  set-split-amounts! will figure out if we need to
+	    reverse the splits by seeing if the amounts add up to 0 and
+	    coping appropriately..  This is to fix a bug where SOME programs
+	    make splits positive, and some make them negative.  This should
+	    deal properly in both cases, so it's a better fix for #105139.
+
 2003-02-14  Christian Stimming  <stimming@tuhh.de>
 
 	* src/import-export/hbci/glade/hbci.glade: Clarify some HBCI
