Fix 'make check' srfi problems when using guile 1.6.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8007 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-02-18  David Hampton  <hampton@employees.org>
+
+	* configure.in: Add new variable for conditionally including the
+	SRFI directory when doing 'make check'.  Should be null when using
+	guile 1.6.
+
+	* Various Makefile.am files: Use new conditional include for the
+	SRFI directory when running 'make check'.
+
 2003-02-17  Derek Atkins  <derek@ihtfp.com>
 
 	Move some files around in preparation for re-factoring the
